# apix

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-dev-to-test-pypi.yml  publish-main-to-pypi.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
apix/: __init__.py  app.py  attribute.py  authenticator.py  database.py  direction.py  direction_type.py  enumeration.py  error.py  error_handler.py  operation_type.py  resolver.py  scalar_type.py
tests/: test_argument_validation.py
