[tool.poetry]
name = "apiX"
version = "0.0.3"
description = "apiX - A framework to create MongoDB-backed applications with a GraphQL API web interface."
authors = ["Danijel Kivaranovic <dan@apix.org>"]
license = "MIT"
readme = "README.md"
keywords = ["graphql", "mongodb", "api", "starlette", "async"]
homepage = "https://apix.org"
repository = "https://github.com/ApixOrg/apix"
documentation = "https://apix.org"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.26.1"
pymongo = "^4.3.3"
motor = "^3.1.1"
graphql-core = "^3.2.3"
uvicorn = {version = "^0.23.0", optional = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
